# HAXX

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  TODO.txt
cmake/: FindSIMD.cmake  HAXXCompilerFlags.cmake  HAXXHandleSIMD.cmake
include/: haxx.hpp  haxx_config.hpp.in  hblas.hpp  hlapack.hpp
include/haxx/: haxx_complex_op.hpp  haxx_def.hpp  haxx_functions.hpp  haxx_quaternion_op.hpp  haxx_quaternion_reduction.hpp  haxx_scalar_op.hpp
include/hblas/: hblas1.hpp  hblas1_def.hpp  hblas1_impl.hpp  hblas2.hpp  hblas2_def.hpp  hblas2_impl.hpp  hblas3.hpp  hblas3_def.hpp  hblas3_impl.hpp  hblas_compile_config.hpp  hblas_config.hpp  hblas_util.hpp  hblas_util_impl.hpp
include/hblas/config/: types.hpp
include/hblas/config/hblas3/: gemm.hpp
include/hblas/generic/hblas1/: hblas_axpym_impl.hpp  hblas_axpyv_impl.hpp  hblas_copyv_impl.hpp  hblas_scalm_impl.hpp  hblas_scalv_impl.hpp  hblas_swapv_impl.hpp  impl.hpp
include/hblas/generic/hblas2/: hblas_gemv_impl.hpp  hblas_geru_impl.hpp  impl.hpp
include/hblas/generic/hblas3/: impl.hpp
include/hblas/generic/util/: contract_impl.hpp  expand_impl.hpp  impl.hpp
include/hblas/hblas1/: hblas_axpy_impl.hpp  hblas_axpym_impl.hpp  hblas_axpyv_impl.hpp  hblas_copy_impl.hpp  hblas_copyv_impl.hpp  hblas_dotc_impl.hpp  hblas_dotcv_impl.hpp  hblas_dotu_impl.hpp  hblas_dotuv_impl.hpp  hblas_nrm2_impl.hpp  hblas_scal_impl.hpp  hblas_scalm_impl.hpp  hblas_scalv_impl.hpp  hblas_swap_impl.hpp  hblas_swapv_impl.hpp
include/hblas/hblas2/: hblas_gemv_impl.hpp  hblas_gerc_impl.hpp  hblas_geru_impl.hpp
include/hblas/hblas3/: hblas_gemm_impl.hpp
include/hblas/pack/: pack.hpp  packops.hpp  typewrapper.hpp
include/hblas/util/: expand_impl.hpp
include/hlapack/: householder_def.hpp  householder_impl.hpp
include/hlapack/householder/: hlapack_gehd2_impl.hpp  hlapack_larf_impl.hpp  hlapack_larfg_impl.hpp
include/util/: boilerplate.hpp  constants.hpp  macro.hpp  simd.hpp  types.hpp
include/util/simd/: intrin_alias.hpp  misc.hpp  qop.hpp
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  dot.cxx  gemm.cxx
src/fortran_bindings/: CMakeLists.txt
src/fortran_bindings/hblas/: hgemm.f
src/fortran_bindings/hblas/hblas1/: haxpych.f  haxpydh.f  haxpyhh.f  hdotc.f  hdotu.f  hscalc.f  hscald.f  hscalh.f
src/fortran_bindings/hblas/hblas2/: hgemvdd.f  hgemvdh.f  hgemvdz.f  hgemvhd.f  hgemvhh.f  hgemvhz.f  hgemvzd.f  hgemvzh.f  hgemvzz.f  hgercd.f  hgerch.f  hgercz.f  hgerud.f  hgeruh.f  hgeruz.f
src/fortran_bindings/hblas/hblas3/: hgemmdd.f  hgemmdh.f  hgemmdz.f  hgemmhd.f  hgemmhh.f  hgemmhz.f  hgemmrr.f  hgemmzd.f  hgemmzh.f  hgemmzz.f
src/fortran_bindings/util/: hdexp.f  hzcon.f  hzexp.f
src/hblas/: CMakeLists.txt  hblas1.cxx  hblas1.cxx.in  hblas2.cxx  hblas2.cxx.in  hblas3.cxx  hblas3.cxx.in  util.cxx
src/hblas/cxx/: CMakeLists.txt
src/hblas/cxx/hblas1/: AXPYScal.cmake  CMakeLists.txt  CopySwap.cmake  Dot.cmake  axpy_scal.cxx  axpy_scal.cxx.in  copy.cxx  copy_swap.cxx  dot.cxx  dot.cxx.in
src/hblas/cxx/hblas3/: CMakeLists.txt  Gemm.cmake  Gemm.cmake!  gemm.cxx  gemm_pack_2.hpp  gemm_pack_4.hpp  kern.cxx
src/hblas/cxx/hblas3/pack/: gemm_pack_2_generic.hpp  gemm_pack_2_quaternion.hpp  gemm_pack_2_quaternion_t1.hpp  gemm_pack_2_quaternion_t2.hpp  gemm_pack_4_generic.hpp
src/hblas/fortran/: CMakeLists.txt
src/hblas/fortran/hblas/hblas1/: hscalh.f
src/hblas/fortran/hblas/hblas3/: hgemmzd.f
src/hblas/fortran/hblas2/: hgemvdd.f  hgemvdz.f  hgerch.f  hgercz.f
src/hblas/fortran/hblas3/: hgemmdh.f  hgemmdz.f  hgemmhh.f
src/hblas/fortran_bindings/: CMakeLists.txt
src/hblas/fortran_bindings/hblas/hblas1/: hdotu.f
src/hblas/fortran_bindings/hblas/hblas2/: hgemvdh.f  hgemvzh.f  hgercd.f
src/hblas/fortran_bindings/hblas/hblas3/: hgemmhd.f  hgemmhz.f
src/hblas/fortran_bindings/util/: lsame.f
src/tune/: CMakeLists.txt  gemm.cxx
src/unit_test/: CMakeLists.txt  haxx_algebra.cxx  haxx_binary_op.cxx  haxx_hblas1.cxx  haxx_hblas2.cxx  haxx_hblas3.cxx  haxx_hlapack_householder.cxx  haxx_unary_op.cxx  haxx_ut.hpp  haxx_util.cxx
tests/: CMakeLists.txt  haxx_algebra.cxx  haxx_binary_op.cxx  haxx_unary_op.cxx  haxx_ut.hpp  hblas1.cxx  hblas2.cxx  hblas3.cxx  hblas_util.cxx  ut.cxx
